[gd_scene format=3 uid="uid://csm8qjq8q2pud"]

[ext_resource type="Script" uid="uid://ckg6ecsbd134f" path="res://assets/particles/sniper_shoot_fire.gd" id="1_n7t2g"]
[ext_resource type="Texture2D" uid="uid://32g8uu2dtwtu" path="res://assets/Kenney's_assets/kenney_particle-pack/PNG (Transparent)/star_09.png" id="2_n7t2g"]
[ext_resource type="Texture2D" uid="uid://c0o8tk88i1ao4" path="res://assets/Kenney's_assets/PNG/Explosion/explosion05.png" id="3_5snxd"]
[ext_resource type="Texture2D" uid="uid://sfjp0lchp60r" path="res://assets/Kenney's_assets/kenney_particle-pack/PNG (Transparent)/star_02.png" id="4_hcigt"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_deq6k"]
emission_shape = 1
emission_sphere_radius = 0.1
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = -2.23517e-06
radial_accel_min = -2.23517e-06
radial_accel_max = 30.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_itvwc"]
transparency = 1
shading_mode = 0
albedo_color = Color(2.4117754, 18.892157, 18.892157, 1)
albedo_texture = ExtResource("2_n7t2g")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_780om"]
material = SubResource("StandardMaterial3D_itvwc")
size = Vector2(0.3, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_780om"]
transparency = 1
shading_mode = 0
albedo_color = Color(10, 4, 4, 1)
albedo_texture = ExtResource("3_5snxd")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_g01nw"]
material = SubResource("StandardMaterial3D_780om")
size = Vector2(0.05, 0.05)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g01nw"]
emission_shape = 1
emission_sphere_radius = 0.5
gravity = Vector3(0, 0, 0)
radial_accel_min = -2.23517e-06
radial_accel_max = 20.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3mpk4"]
transparency = 1
shading_mode = 0
albedo_color = Color(18.892157, 7.8348074, 10.229394, 1)
albedo_texture = ExtResource("4_hcigt")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_iok8o"]
material = SubResource("StandardMaterial3D_3mpk4")
size = Vector2(0.1, 0.1)

[node name="sniper_shoot_fire" type="Node3D" unique_id=1543738908]
script = ExtResource("1_n7t2g")

[node name="GPUParticles3D" type="GPUParticles3D" parent="." unique_id=1553411571]
layers = 5
emitting = false
amount = 35
lifetime = 0.2
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_deq6k")
draw_passes = 2
draw_pass_1 = SubResource("QuadMesh_780om")
draw_pass_2 = SubResource("QuadMesh_g01nw")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="." unique_id=2098841512]
layers = 5
emitting = false
amount = 10
lifetime = 0.2
one_shot = true
speed_scale = 3.0
local_coords = true
process_material = SubResource("ParticleProcessMaterial_g01nw")
draw_pass_1 = SubResource("QuadMesh_iok8o")

[connection signal="finished" from="GPUParticles3D" to="." method="_on_gpu_particles_3d_finished"]
[connection signal="finished" from="GPUParticles3D2" to="." method="_on_gpu_particles_3d_2_finished"]
